@@ -218,6 +218,7 @@ export("+.section",
        swDynamicHeight,
        swLapseRate,
        swN2,
+       swPressure,
        swRho,
        swSCTp,
        swSigma,
