@@ -1,4 +1,5 @@
 0.9-13
+- swPressure() added
 - ctdFindProfiles() added
 - as.ctd(): new arguments filename etc
 - remove oceBisect(), which merely reproduces uniroot()
